// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderProfile component: Should render with message 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Component
    size="large"
  />
  <StatusBar
    animated={false}
    barStyle="default"
    showHideTransition="fade"
  />
  <Component>
    Test message
  </Component>
</Component>
`;

exports[`HeaderProfile component: Should render without message 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Component
    size="large"
  />
  <StatusBar
    animated={false}
    barStyle="default"
    showHideTransition="fade"
  />
</Component>
`;
